@@ -5,7 +5,7 @@
 	copyright	= "MIT X11"
 	url		= "http://www.monodevelop.com"
 	description	= "Database Components Module"
-	category    = "Database"
+	category	= "Database"
 	version		= "0.19.0">
     
 	<Runtime>
